Fixed input width
2.2em is too small for long numbers

--- a/editor/svg-editor.css
+++ b/editor/svg-editor.css
@@ -832,7 +832,7 @@ span.zoom_tool {
 }
 
 #tools_bottom input[type=text] {
-  width: 2.2em;
+  width: 4em;
 }
 
 /* Color tools: fill, stroke, opacity
